# UnderratedVision

./: .env.example  .git_remotes_backup.txt  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  MAGENTIC_UI_SETUP.md  QUICK_REFERENCE.md  README.md  REPOSITORY_UPDATE_SUMMARY.md  SECURE_COMMIT_SUMMARY.md  SECURITY.md  SECURITY_VERIFICATION.md  TROUBLESHOOTING.md  pyproject.toml  setup_new_repo.sh  start-magentic-ui.sh  start_underratedvision.sh
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/workflows/: ci.yml
extensions/: README.md  __init__.py
extensions/agents/: __init__.py  base.py
extensions/agents/blue_collar/: construction_coordinator.py
extensions/agents/creative/: marketing_strategist.py
extensions/agents/healthcare/: medical_research_assistant.py
extensions/agents/white_collar/: real_estate_analyst.py
extensions/demo/: stakeholder_demonstration.py
extensions/workflows/: multi_domain_orchestrator.py
magentic-ui/frontend/: package-lock.json
magentic-ui/frontend/src/components/views/chat/: chat.tsx
magentic-ui/src/magentic_ui/backend/: cli.py
magentic-ui/src/magentic_ui/backend/web/managers/: connection.py
